# ptas_benchmarks

./: .gitignore  Algo_AmpTh.py  Algo_PLL.py  Algo_SineFit.py  Algo_TWave.py  Algo_ZeroCrossing.py  Inhibitors.py  README.md  Simulations.py  pyproject.toml  run_group_simulations.ipynb  test_loadsleepedf.ipynb  test_twave.ipynb
